--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@dotlottie/react-player": "^1.6.15",
+    "@emailjs/browser": "^3.12.1",
+    "@react-email/render": "^0.0.12",
     "formik": "^2.4.5",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
