--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dotlottie/react-player": "^1.6.15",
     "@emailjs/browser": "^3.12.1",
     "@react-email/render": "^0.0.12",
+    "firebase": "^10.7.2",
     "formik": "^2.4.5",
     "nodemailer": "^6.9.8",
     "react": "^18.2.0",
