--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-email/render": "^0.0.12",
     "firebase": "^10.7.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.3",
     "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
